* Makefile
   - check librepfunc availability and version, link to it.
     Requires now at least librepfunc-1.1.0,
     see https://github.com/wirbel-at-vdr-portal/librepfunc
* CmdOpts.cpp
   - replace split() by librepfunc SplitStr()
* Countries.cpp
   - replace split() by librepfunc SplitStr()
* Femon.cpp
   - replace milliSleep() by librepfunc mSleep()
   - use FloatToStr() from librepfunc
* Helpers.{h,cpp}
   - remove split(), LowerCase(), UpperCase(), FrontFill(), BackFill(),
     ToString(), IntToStr(), IntToHex(), FloatToStr(), ExpToStr(),
     milliSleep(), ReadFile(), class cFileList, class File and use
     librepfunc instead.
* Library.cpp
   - replace split() by librepfunc SplitStr()
* Lnb.cpp
   - replace split() by librepfunc SplitStr()
   - fix C-Band and C-Band Multi LNB lower frequency range in comments
* main.cpp
   - replace split() by librepfunc SplitStr()
   - replace milliSleep() by librepfunc mSleep()
   - replace IntToStr() by librepfunc IntToStr()
* OutputFormats.cpp
   - replace std::to_string() by IntToStr()   
* bump wirbelscan version to 2021.11.28
* bump version to 20211128

20211212:
-------------------------------------------------------------------------------
* Makefile
   - add dependency checks for libjpeg, freetype2, fontconfig, pugixml
* CmdOpts.cpp
   - fix diseqc, initializing vdr/diseqc.c:CurrentDevices, without this change
     any diseqc use was broken in w_scan_cpp
* bump wirbelscan version to 2021.12.11
* CmdOpts.cpp, Lnb.cpp
   - commandline option '-l?' for printing LNB options was incomplete.
     Fixing it.
* bump version to 20211212

20230604:
-------------------------------------------------------------------------------
* fix FTBC on wirbelscan plugin -> bump wirbelscan version

2023xxxx:
-------------------------------------------------------------------------------
* fix indent on w_scan XML output
* fix satip-server commandline option