@@ -380,13 +380,27 @@ bool ParseArguments(int argc, char* argv[]) {
 
   if (use_satip) {
      std::string options("-t 16384");
+     bool RtpOverTcp = false;
 
      // add further satip plugin options as needed.
-     if (not WirbelscanSetup.SatipSvr.empty())
-        options += ";-s" + WirbelscanSetup.SatipSvr;
+     if (not WirbelscanSetup.SatipSvr.empty()) {
+        options += ";-s " + WirbelscanSetup.SatipSvr;
+        auto v1 = SplitStr(WirbelscanSetup.SatipSvr, '|');
+        if (v1.size() >= 3) {
+           auto v2 = SplitStr(v1[2], ':');
+           if (v2.size() >= 2) {
+              auto ServerQuirks = strtol(v2[1].c_str(), nullptr, 0);
+              RtpOverTcp = (ServerQuirks & 0x8) > 0;
+              }
+           }
+        }
 
      libs.push_back(new Library(LibSatip, options));
      satip = libs[1]->Plugin();
+     if (RtpOverTcp) {
+        Message("Using RTP over TCP.");
+        satip->SetupParse("TransportMode", "2");
+        }
      }
 
   switch(WirbelscanSetup.DVB_Type) {
@@ -510,6 +524,8 @@ bool ExtHelpText(std::string ProgName) {
   ss << "                 192.168.2.66|DVBS2-4|OctopusNet;192.168.0.2|DVBT2-4|minisatip:0x18" << std::endl;
   ss << "                 192.168.2.66:554|DVBS2-2:S19.2E|OctopusNet;192.168.2.2:8554|DVBS2-4:S19.2E,S1W|minisatip" << std::endl;
   ss << "               for detailed description, refer to vdr-plugin-satip's README." << std::endl;
+  ss << "               NOTE: If the satip server quirk 0x08 is set," << std::endl;
+  ss << "                     RTP over TCP is used instead of unicast." << std::endl;
   ss << ".................DVB-C..................." << std::endl;
   ss << "       -i N, --inversion N" << std::endl;
   ss << "               spectral inversion setting for cable TV" << std::endl;
